Update notebook with revised analysis

--- a/Code/Food Adverse Event.ipynb
+++ b/Code/Food Adverse Event.ipynb
@@ -973,7 +973,7 @@
     "    d. Are there products with unusually high rates of specific adverse events?\n",
     "    e. What is the frequency of each product’s involvement across all cases?\n",
     "\n",
-    "### 3.III. Analysis - Outcomes & Severity\n",
+    "### 3.III. [Outcomes & Severity](#3.III.-Data-Analysis---Outcomes-&-Severity)\n",
     "    a. What are the most common patient Adverse Events ?\n",
     "    b. What are the most common outcomes (e.g., hospitalization, death, recovery)?\n",
     "    c. Give a pivot table for count of different outcomes that are associated with specific patient groups? \n",
@@ -982,13 +982,13 @@
     "            i.e Elderly Total LT case in Male - xx, Total LT case in Female-yy\n",
     "    e. What proportion of cases resulted in severe outcomes?\n",
     "\n",
-    "### 3.IV. Analysis - Temporal Trends ###\n",
+    "### 3.IV. [Temporal Trends](#3.IV.-Data-Analysis---Temporal-Trends)\n",
     "    a. What is the year-wise number of cases reported?\n",
     "    b. Are there seasonal or monthly trends in case reporting?\n",
     "    c. Are there spikes or declines in reporting over time?\n",
     "    d. What are the count of events (yearly basis) for each Age group?\n",
     "\n",
-    "### 3.V. Advanced Analysis\t\n",
+    "### 3.V. [Advanced Analysis](#V.-Advanced-Analysis)\n",
     "    a. Are there patterns or correlations between patient characteristics and outcomes?\n",
     "    b. Can we predict severe outcomes based on available data?\n",
     "    c. Hypothesis testing.\n",
@@ -4428,30 +4428,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "408cef21-d423-4dac-8bd5-b05dcc5ff7be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2ac1566-a0cc-45d8-a4af-3cfd53b06fc1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ac73515-5efb-4466-adf9-97707c628295",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
